# discord-webhook-wrapper

./: Cargo.toml  README.md
src/: main.rs
