[package]
name = "discord-webhook-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
toml = "0.6.0"
